# pySuAVE

./: .gitignore  CHECKPOINT.md  MATH_FUNCTIONS_MIGRATION.md  MIGRATION_PROGRESS.md  O_QUE_FALTA_MIGRAR.md  README_PYTHON.md  RELATORIO_FINAL.md  SESSION_SUMMARY.md  clean_macos_files.sh  install_dev.sh  pyproject.toml  remove_emojis.py
.agent/workflows/: fortran-to-python-migration.md
examples/: example_basic_io.py
pysuave/: __init__.py
pysuave/analysis/: __init__.py  density.py  order.py  statistics.py  thickness.py  topography.py
pysuave/cli/: __init__.py  main.py  stat.py
pysuave/core/: __init__.py  constants.py  types.py
pysuave/geometry/: __init__.py  area.py  grid_params.py  rmsd.py
pysuave/io/: __init__.py  ndx.py  pdb.py
pysuave/utils/: __init__.py  coordinates.py  geometry_utils.py
tests/: test_area.py  test_geometry_utils.py  test_grid_params.py  test_types.py
