[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysuave"
version = "0.1.0"
description = "Surface Assessment Via grid Evaluation - Python implementation"
readme = "README_PYTHON.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "Denys E. S. Santos", email = "suave.biomat@gmail.com"},
]
keywords = ["molecular dynamics", "surface analysis", "curvature", "computational chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "MDAnalysis>=2.0.0",
    "numba>=0.54.0",
    "click>=8.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.0.250",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://www.biomatsite.net/suave-software"
Repository = "https://github.com/SuAVE-Software/pySuAVE"
Documentation = "https://pysuave.readthedocs.io"
"Bug Tracker" = "https://github.com/SuAVE-Software/pySuAVE/issues"

[project.scripts]
pysuave = "pysuave.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysuave*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pysuave --cov-report=html --cov-report=term"
